--- a/final_project/Starter Streaming Tweet Sentiment - Spring 2025 Final Project.ipynb
+++ b/final_project/Starter Streaming Tweet Sentiment - Spring 2025 Final Project.ipynb
@@ -1152,8 +1152,42 @@
     }
    },
    "source": [
-    "### ENTER YOUR MARKDOWN HERE"
+    "\n",
+    "### Spill  \n",
+    "In the Spark UI **Stages** tab I sorted by **Shuffle Read** and **Shuffle Write**. The highest shuffle read (~ 1655 KiB at stage 2634) and highest shuffle write (~ 1655 KiB at stage 2632) both occurred in the stages that read the Bronze Delta table during the Bronze Data exploratory analysis. In those same stages, the Summary Metrics **do not include** any **“Spill (Disk)”** or **“Spill (Memory)”** columns—those entries are simply absent. This absence confirms that none of our shuffle buffers overflowed to disk, so our partitioning and executor memory settings perfectly avoid any spill I/O. _Screenshots for both stages attached with submission._\n",
+    "\n",
+    "### Skew  \n",
+    "In the Spark UI **Stages** tab, I first filtered for stages with the longest durations and identified **Stage 1964** (`gold_stream`) as having skew. Task runtimes range from **2 s** to **60 s** (median **35 s**), and per‑task input sizes vary from **1.9 KiB/8 rows** to **61.9 KiB/315 rows**. This clear imbalance shows that a few “hot” mention keys carry far more records, creating stlonger raggler tasks that delay the entire stage. To mitigate this, we can salt the mention key to distribute heavy partitions more evenly. _Screenshot for Stage 1964 attached with submission._  \n",
+    "\n",
+    "### Shuffle  \n",
+    "In the Spark UI **Stages** tab I sorted by **Shuffle Read** and **Shuffle Write** to find the heaviest network I/O. The largest Shuffle Read (~ 1655 KiB at Stage 2634) and Shuffle Write (~ 1655 KiB at Stage 2632) both happen when reading the Bronze Delta table. At under 2 MiB per batch, these shuffle volumes are extremely small relative to our data size. We also set `spark.sql.shuffle.partitions` to match our 8‑core cluster, keeping each partition’s data footprint minimal. As a result, network shuffle is not a bottleneck in our pipeline. _Screenshots for these stages attached with submission._  \n",
+    "\n",
+    "### Storage  \n",
+    "In the Spark UI, for some reason the **Storage** tab was blank for me (likely due to permission settings), but our raw data consists of **100 000** individual JSON files—each just a few hundred bytes. Writing these out as Delta leads to thousands of tiny files, which adds metadata overhead and slows planning. Fortunately, the project handout provides an `optimize_table(path)` utility that compacts each Delta table into larger files. Running `optimize_table(path)` on Bronze, Silver, and Gold reduces planning time and speeds up downstream reads. _Screenshots for blank storage tab attached with submission._  \n",
+    "\n",
+    "\n",
+    "### Serialization  \n",
+    "I checked a couple of Gold stream stages (e.g. Stage 1904, Stage 2434, and Stage 2434) where the vectorized MLflow UDF is applied, and the **Executor Serialization Time** and **Deserialization Time** were consistently **minimal (< 15 ms)** per task. This confirms that using `mlflow.pyfunc.spark_udf` overhead almost low, so serialization does not impede our pipeline’s performance. _Screenshots for these stages attached with submission._  \n",
+    "\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "6a4a52e0-b7e6-476f-b650-28d729102a4e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
